--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,16 @@
+//Font import Oswald 400,600,700
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@400;600;700&display=swap");
+
+
+
+//Variables Color Scheme
+$base_color: #790c6a;
+$secondary_color: #0a0c65;
+$secodary_color-100: #0a0c659b;
+
+
+
+//css reset
 *,
 *:before,
 *:after {
@@ -11,6 +23,9 @@ body {
   font-family: "Oswald", sans-serif;
 }
 
+
+
+//navigation bar
 a.nav-link.text-white {
   position: relative;
   padding-left: 1rem;
@@ -24,7 +39,7 @@ a.nav-link.text-white {
     right: 0;
     width: 100%;
     height: 3px;
-    background-color: #df0e50;
+    background-color: $base_color;
     transform-origin: right;
     transform: scaleX(0);
     transition: transform 0.3s ease-in;
@@ -45,7 +60,7 @@ a.nav-link.text-white {
       right: 0;
       width: 100%;
       height: 100%;
-      background-color: #0a0c659b;
+      background-color: $secodary_color-100;
       z-index: -1;
       transform-origin: right;
       transform: scaleX(0);
@@ -69,23 +84,24 @@ a.nav-link.text-white {
     border: 1px solid rgba(255, 255, 255, 0.18);
     width: 100%;
     padding: 1rem 1rem;
-    // display: flex;
-    // flex-direction: column;
-    // align-items: center;
     li {
       a {
-        font-size: 2rem;
+        font-size: 1.5rem;
       }
     }
   }
 }
 
+
+
+//hero section
 .hero-subtitle {
   margin-top: 5em;
   font-weight: 700;
   font-size: 2rem;
   @media (max-width: 480px) {
     text-align: center;
+    margin-top: 6em;
     font-size: 1.5rem;
   }
 }
@@ -103,20 +119,27 @@ a.nav-link.text-white {
     url("./img/image.webp");
   background-repeat: no-repeat;
   background-size: cover;
+  @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+    height: 80vh;
+  }
 }
+
+
+
+//events section
 .events-section {
-  background: #c33764; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to right,
-    #1d2671,
-    #ce1c54
+  background: $base_color; /* fallback for old browsers */
+  background: -webkit-radial-gradient(
+    circle at top right,
+    $base_color 10%,
+    30%,
+    $secondary_color 70%
   ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #1d2671, #df0e50);
   background: radial-gradient(
     circle at top right,
-    #df0e50 10%,
+    $base_color 10%,
     30%,
-    #0a0c65 70%
+    $secondary_color 70%
   );
   position: relative;
   height: 100%;
@@ -126,27 +149,28 @@ a.nav-link.text-white {
 .events-title {
   font-weight: 700;
   font-size: 5rem;
+  position: relative;
+  &:after {
+    content: "WE OWN THE NIGHT";
+    position: absolute;
+    width: 100%;
+    color: white;
+    opacity: 0.9;
+    top: 30%;
+    left: 0;
+    font-size: 2rem;
+  }
   @media (max-width: 480px) {
     text-align: center;
     font-size: 3rem;
-  }
-}
-.events-subtitle {
-  font-weight: 700;
-  font-size: 2rem;
-  position: absolute;
-  top: 38%;
-  left: 0;
-  opacity: 0.9;
-  @media (max-width: 480px) {
-    text-align: center;
-    left: 18%;
-    font-size: 1.5rem;
+    &:after {
+      font-size: 1.5rem;
+    }
   }
 }
 
 .section-content {
-  position: relative;
+  //position: relative;
   padding: 2rem 0;
 }
 
